# hogwatch-ai

./: .gitignore  README.md  blueprint.md  pyproject.toml
core/: detector.py  models.py  parser.py  report.py  timeline.py
data/: scenario_1.json  scenario_10.json  scenario_2.json  scenario_3.json  scenario_4.json  scenario_5.json  scenario_6.json  scenario_7.json  scenario_8.json  scenario_9.json
hogwatch_cli/: main.py
llm/: client.py  prompts.py
tests/: test_detector.py  test_integration.py
